src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID( Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>After_Due_Date_Invoice_Amount__c</fullName>
        <formula>Invoice_Amount__c +((Invoice_Amount__c *15)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that there&apos;s something notable about this invoice, primarily for collections purposes.</description>
        <label>Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Role__c</fullName>
        <formula>TEXT( Attendee__r.Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When Billing Account is filled, the invoice PDF shows the Billing Accounts address</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Billing Account)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When Billing Contact is filled, the invoice PDF shows the Billing Contacts address</description>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Billing Contact)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Name_Text__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>BLANKVALUE(Deposition__r.Deposition_Group__r.Name,  Deposition__r.Case_Name_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Before_Invoicing__c</fullName>
        <formula>if(  

(NOT(ISBLANK(Deposition__r.Deposition_Group__c))  ||  Deposition__r.Attorney_Count__c &gt; 4) &amp;&amp;  NOT(ISPICKVAL(Deposition__r.VIP_Level__c ,&quot;&quot;))
,
IMAGE(&quot;https://c.cs11.content.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068Z0000000Ep70&amp;operationContext=DELIVERY&amp;contentId=05TZ0000000fqZj&amp;page=null&amp;d=/a/Z0000000DXVR/9ZACvk_gVBzxkjnpKRTyb1p7X4mpF44LE8Jev75RPNY&amp;oid=00DZ000000MhmaB&amp;dpt=null&amp;viewId=&quot;,&quot;COD Warning&quot;, 260, 350),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Before Invoicing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_No_Text__c</fullName>
        <label>Claim No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_No__c</fullName>
        <formula>Deposition__r.Insurance_Claim_Info__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Professional_Text__c</fullName>
        <label>Claims Professional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Professional__c</fullName>
        <formula>Deposition__r.Claims_Professional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claims Professional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collections_Level__c</fullName>
        <label>Collections Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Polite Email</fullName>
                </value>
                <value>
                    <fullName>Dunning 1</fullName>
                </value>
                <value>
                    <fullName>Dunning 2</fullName>
                </value>
                <value>
                    <fullName>Demand Dunning</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>***ISSUES***</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Next_Step__c</fullName>
        <label>Collections - Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hands off</fullName>
                </value>
                <value>
                    <fullName>Stay the course</fullName>
                </value>
                <value>
                    <fullName>Suggest collections</fullName>
                </value>
                <value>
                    <fullName>Suggest shaming</fullName>
                </value>
                <value>
                    <fullName>WF client – special rules apply</fullName>
                </value>
                <value>
                    <fullName>Will be paid</fullName>
                </value>
                <value>
                    <fullName>Write off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Notes__c</fullName>
        <label>Collections Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>Deposition__r.Commission__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable_Payment_Amount__c</fullName>
        <formula>Commissionable_Revenue__c *  Commissionable_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Payment__c</fullName>
        <label>Commissionable Payment</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue__c</fullName>
        <label>Commissionable Revenue</label>
        <summarizedField>Invoice_Item__c.Commissionable_Revenue__c</summarizedField>
        <summaryForeignKey>Invoice_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conga_Due_Date__c</fullName>
        <formula>TEXT(MONTH( Due_Date__c)) &amp; 
&quot;/&quot; &amp;
TEXT(DAY(Due_Date__c)) &amp;
&quot;/&quot; &amp;
TEXT(YEAR(Due_Date__c))</formula>
        <label>Conga Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Email_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(Billing_Contact__r.Email)), 
    Billing_Contact__r.Email, 
     IF(NOT(ISBLANK(Rate_Sheet__r.Accounting_Email_Address__c)), 
        Rate_Sheet__r.Accounting_Email_Address__c, 
         IF(NOT(ISBLANK(Contact__r.Bill_To_Email_Addresses__c)),
            Contact__r.Bill_To_Email_Addresses__c, 
             Account__r.Accounting_Email_Address__c)))</formula>
        <label>Conga Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Firm_Name__c</fullName>
        <formula>Deposition__r.Primary_Court_Reporting_Firm__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Invoice_Template_Id__c</fullName>
        <description>IF(Conga_Firm_Name__c = &quot;Eppley Reporting&quot;, 
    &quot;a1z2K0000011RthQAE&quot;, 
    &quot;a1z2K0000011RtrQAE&quot;)</description>
        <formula>IF(Conga_Firm_Name__c = &quot;Eppley Reporting&quot;, 
    &quot;a1z2K0000011RthQAE&quot;, 
    &quot;a1z2K0000011RtrQAE&quot;)</formula>
        <label>Conga Invoice Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Templelate_Column_Selection__c</fullName>
        <formula>IF( AND(Show_Quantity_Column__c, Show_Rate_Column__c) , 
&quot;All&quot;, 
IF(Show_Quantity_Column__c, &quot;Qty&quot;, 
IF(Show_Rate_Column__c, &quot;Rate&quot;, 
&quot;Rows&quot;) ) )</formula>
        <label>Conga Templelate Column Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>BLANKVALUE( Billing_Contact__c ,  Contact__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due_Bucket__c</fullName>
        <formula>IF( Days_Past_Due__c &lt;=30,&apos;0-30&apos;,
IF(Days_Past_Due__c &lt;=60,&apos;30-60&apos;,
IF(Days_Past_Due__c &lt;=90,&apos;60-90&apos;,
IF(Days_Past_Due__c &lt;=120,&apos;90-120&apos;,
IF(Days_Past_Due__c &lt;=150,&apos;120-150&apos;,
IF(Days_Past_Due__c &lt;=180,&apos;150-180&apos;,

&apos;Over 180&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due (Bucket)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <formula>IF( AND( Due_Amount__c &gt; 0, TODAY() &gt; Due_Date__c), TODAY() -  Due_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Invoice_Date__c</fullName>
        <formula>TODAY() -  Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Invoice Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deponent_Name__c</fullName>
        <label>Deponent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Cancelled__c</fullName>
        <formula>ISPICKVAL(Deposition__r.Deposition_Status__c, &apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <formula>Deposition__r.Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>Invoice_Amount__c - Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Amount_copy__c</fullName>
        <formula>Due_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Invoice_Date__c +Value( TEXT(Payment_Term_Days__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <label>External Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Attorney__c</fullName>
        <formula>Deposition__r.Hiring_Attorney__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hiring Attorney</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Age_Upon_Payment__c</fullName>
        <formula>IF(ISBLANK(Payment_Date__c),NULL,(Payment_Date__c -  Invoice_Date__c))</formula>
        <label>Invoice Age Upon Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <summarizedField>Invoice_Item__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Value(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>A field to note where the deposition occurred.</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <description>It brings the URL of the logo from Firm object</description>
        <formula>IF(Conga_Firm_Name__c = &quot;Eppley Reporting&quot;, 
&quot;https://nextgen--c.na7.content.force.com/servlet/servlet.ImageServer?id=015A0000006vVP7&amp;oid=00DA0000000XoMw&quot;, 
Deposition__r.Primary_Court_Reporting_Firm__r.Logo_URL__c)</formula>
        <label>Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter_Number_Text__c</fullName>
        <label>Matter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Balance__c</fullName>
        <label>Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ordering_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicating whether this an original invoice (ordered by the primary attorney or someone on their account) versus any other client invoice</description>
        <inlineHelpText>Indicating whether this an original invoice (ordered by the primary attorney or someone on their account) versus any other client invoice</inlineHelpText>
        <label>Ordering Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overpaid_Resource__c</fullName>
        <formula>(Paid_Amount__c &gt;  Invoice_Amount__c)  &amp;&amp;  ((Attendee_Role__c = &quot;Court Reporter&quot;)  || (Attendee_Role__c = &quot;Videographer&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overpaid Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <description>Total amount paid through payments, credits or misc. revenue.</description>
        <label>Paid Amount</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Payment, Misc. Receivables, credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>When was this invoice paid?</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Percentage__c</fullName>
        <formula>Paid_Amount__c /  Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>IF(Paid_Amount__c&gt;= Invoice_Amount__c,&apos;Paid&apos;,IF(Paid_Amount__c==0,&apos;Unpaid&apos;,IF(Paid_Amount__c&gt;0,&apos;Partial&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Days__c</fullName>
        <label>Payment Term Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                    <default>true</default>
                    <label>30</label>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <formula>HYPERLINK(&apos;/apex/PrintInvoice?id=&apos;+ Id , &apos;Print&apos; ,&apos;blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_of_Order__c</fullName>
        <label>Proof of Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Related Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Show_Quantity_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Quantity Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Rate_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Rate Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Rows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standing_Orders__c</fullName>
        <formula>IF(ISBLANK(Account__r.Financial_Notes__c),&quot;&quot;, &quot;Account - Financial Notes:&quot; &amp; Account__r.Financial_Notes__c)
&amp;
IF(ISBLANK( Account__r.Standing_Orders__c ),&quot;&quot;, &quot;Account - Standing Orders:&quot; &amp; Account__r.Standing_Orders__c )
&amp;
IF(ISBLANK(Billing_Contact__r.Standing_Orders__c ),&quot;&quot;, &quot;Billing Contact - Standing Orders:&quot; &amp; Billing_Contact__r.Standing_Orders__c )
&amp;
IF(ISBLANK( Contact__r.Standing_Orders__c ),&quot;&quot;, &quot;Contact - Standing Orders:&quot; &amp; Contact__r.Standing_Orders__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standing Orders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <formula>if(ISPICKVAL(Deposition__r.State__c,&quot;Connecticut&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Commissionable_Rev_After_Credits__c</fullName>
        <formula>Commissionable_Revenue__c -  Total_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Commissionable Rev After Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credits__c</fullName>
        <label>Total Credits</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_After_Credits__c</fullName>
        <formula>Invoice_Amount__c  -  Total_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue After Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Transcription</fullName>
                </value>
                <value>
                    <fullName>Video/Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case_Name__c</columns>
        <columns>Deposition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Name__c</field>
            <operation>contains</operation>
            <value>Nine West</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Block_Void_Status_For_Due_Invoices</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW()==false &amp;&amp; ISCHANGED(Status__c) &amp;&amp; TEXT(Status__c)==&apos;Void&apos; &amp;&amp; Due_Amount__c&gt;0</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You can&apos;t void an invoice with a pending open balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Date_Can_Not_be_In_Past</fullName>
        <active>true</active>
        <description>When selecting the invoice date, don’t allow invoices to be dated in prior months. For example, on February 15th, an invoice can be created for Feb 1, Feb 15 or Feb 28th but cannot be created for January 20th.</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(Invoice_Date__c))&amp;&amp;  ((MONTH(Invoice_Date__c)&lt;MONTH(TODAY()) &amp;&amp; YEAR(Invoice_Date__c) == YEAR(TODAY()) ) || YEAR(Invoice_Date__c) &lt;YEAR(TODAY()))</errorConditionFormula>
        <errorDisplayField>Invoice_Date__c</errorDisplayField>
        <errorMessage>Invoice can&apos;t be created for past month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Type_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Please enter a Type for this invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()==false &amp;&amp; (ISCHANGED(Invoice_Date__c) ||
ISCHANGED(Deposition__c) ||
ISCHANGED(Attendee__c) ||
ISCHANGED(Type__c) ||
ISCHANGED(Status__c) ||
ISCHANGED(Invoice_Amount__c) ||
ISCHANGED(Payment_Term_Days__c)


) &amp;&amp;  (MONTH( PRIORVALUE(Invoice_Date__c) ) &lt;  MONTH(TODAY())
||
YEAR(PRIORVALUE(Invoice_Date__c)) &lt; YEAR(TODAY()) )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You can&apos;t edit an invoice from a prior month.</errorMessage>
    </validationRules>
</CustomObject>